samples/_failures_safe/1761272986_1973f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1f52b5c4.c: In function ‘main’:
./samples/SAFE/__tmp_1f52b5c4.c:151:5: error: expected expression at end of input
  151 |     for (
      |     ^~~
./samples/SAFE/__tmp_1f52b5c4.c:151:5: error: expected declaration or statement at end of input
